--- a/views/NewProjectPage.handlebars
+++ b/views/NewProjectPage.handlebars
@@ -2,7 +2,6 @@
 <h1>New Project Page!!</h1>
 </div>
 
-
 <p> Categories</p>
 <form class="create-form card p-2" style="width: 34rem;">
 
@@ -30,41 +29,4 @@
 <form class = "submitButton">
 <input type="submit" value="Submit">
 </form>
-<table>
-  <tr>
-    <th>Project Name</th>
-    <th>General Instructions</th>
-    <th>Actions</th>
-  </tr>
-  <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-  </tr>
-  <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-  </tr>
-  <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
-  </tr>
-  <tr>
-    <td>Island Trading</td>
-    <td>Helen Bennett</td>
-    <td>UK</td>
-  </tr>
-  <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
-  </tr>
-  <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
-    <td>Italy</td>
-  </tr>
-</table>
-
+{{> projects/project-block}}
