--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,14 +3,26 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/style.css" type="text/css" />
-	<link rel="stylesheet" href="css/main.css" <title>Fermentor</title>
+	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+	 crossorigin="anonymous">
+
+	 <link rel="stylesheet" href="css/styles.css" type="text/css" />
+	<link rel="stylesheet" href="css/main.css">
+	<title>Fermentor</title>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 	<script src="../public/js/Register.js"></script>
 
+
+	
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+	 crossorigin="anonymous"></script>
 	<script src="js/form.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/task.js"></script>
+
+
 </head>
 
 <body>
