--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -64,18 +64,18 @@
 
     </h4>
     <ul class="list-group mb-3">
-
+     
+         {{#each tasks}}
       <li class="list-group-item d-flex justify-content-between lh-condensed">
         <div>
+
           <h6 class="my-0">
-            Task Number: 1 - Name: name <br>
+            Task Number: {{taskNumber}} - Name:{{name}} <br>
+       
 
           </h6>
 
-         
-
-
-          <div class="modal" id="exampleModal" tabindex="-1" role="dialog">
+          <div class="modal" id="exampleModal{{id}}" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -85,13 +85,13 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                 description:<br>
-                  time Since Last Step: <br>
-                  time Units: <br>
-                  cooking Hardware: <br>
-                  duration: <br>
-                  ingredients:<br>
-                  steps:<br>
+                 description: {{description}}<br>
+                  time Since Last Step: {{timeSinceLastStep}}<br>
+                  time Units: {{timeUnits}} <br>
+                  cooking Hardware: {{cookingHardware}} <br>
+                  duration: {{duration}} <br>
+                  ingredients:{{ingredients}} <br>
+                  steps:{{steps}}<br>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -104,15 +104,16 @@
         </div>
         <span class="text-muted">
            <!-- Button trigger modal -->
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal{{id}}">
            Details
           </button>
-          <button class="delete btn btn-primary" data-id="">
+          <button class="delete btn btn-primary" data-id={{id}}>
             Delete
           </button>
         </span>
 
       </li>
+       {{/each}}
 
     </ul>
 
