--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -39,17 +39,21 @@
           <input type="text" class="form-control" id="duration">
         </div>
       </div>
-      <div class="form-group">
-        <label for="hardware">Cooking Hardware</label>
-        <textarea class="form-control" id="hardware" rows="3"></textarea>
+      <div class="form-group " id="cooking">
+        <label for="hardware" >Cooking Hardware</label>
+        <button type="button" class=" btn btn-primary" id="btnCooking">Add cooking hardware</button>
+        <div class="mt-3" id="opCooking"></div>
+       
       </div>
       <div class="form-group">
         <label for="ingredients">Ingredients</label>
-        <textarea class="form-control" id="ingredients" rows="3"></textarea>
+       <button type="button" class=" btn btn-primary" id="btnIngredients">Add Ingredients</button>
+        <div class="mt-3" id="opIngredients"></div>
       </div>
       <div class="form-group">
-        <label for="steps">steps</label>
-        <textarea class="form-control" id="steps" rows="3"></textarea>
+        <label for="steps">S teps</label>
+      <button type="button" class=" btn btn-primary" id="btnSteps">Add steps</button>
+        <div class="mt-3" id="opSteps"></div>
       </div>
 
       <input type="hidden" id="idProject" value="1">
@@ -79,7 +83,7 @@
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title">Modal title</h5>
+                  <h5 class="modal-title">Task Number: {{taskNumber}} - Name:{{name}}</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -88,10 +92,10 @@
                  description: {{description}}<br>
                   time Since Last Step: {{timeSinceLastStep}}<br>
                   time Units: {{timeUnits}} <br>
-                  cooking Hardware: {{cookingHardware}} <br>
+                  cooking Hardware:<br> {{{ cookingHardware}}} <br>
                   duration: {{duration}} <br>
-                  ingredients:{{ingredients}} <br>
-                  steps:{{steps}}<br>
+                  ingredients:<br>{{{ingredients}}} <br>
+                  steps:<br>{{{steps}}}<br>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
