--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -56,7 +56,7 @@
         <div class="mt-3" id="opSteps"></div>
       </div>
 
-      <input type="hidden" id="idProject" value={{id}}>
+      <input type="hidden" id="idProject" value={{id]}}>
 
 
       <button type="submit" class="btn btn-primary">Add Task</button>
