--- a/views/partials/projects/project-block.handlebars
+++ b/views/partials/projects/project-block.handlebars
@@ -11,7 +11,7 @@
     <td>{{name}}</td>
     <td>{{instructions}}</td>
     <td>{{userId}}</td>
-    <td><button type=“button” class=” btn btn-primary” data-id={{id}} id=addTask> Add Task</button></td>
+    <td><a href="/task/{{id}}">Add task</a></td>
   </tr>
   {{/each}}
 </table>
