--- a/views/partials/projects/project-block.handlebars
+++ b/views/partials/projects/project-block.handlebars
@@ -11,9 +11,7 @@
     <td>{{name}}</td>
     <td>{{instructions}}</td>
     <td>{{userId}}</td>
-    <td><a href='/task/{{id}}'>Add new task {{id}}</a>
-      <td> <span class='delbtn' data-id={{id}}> <button type=“button” > Delete Task</button></td></span>
-       <td> <span class='updatebtn' data-id={{id}}> <button type=“button” > Update</button></td></span
+    <td><button type=“button” class=” btn btn-primary” data-id={{id}} id=addTask> Add Task</button></td>
   </tr>
   {{/each}}
 </table>
