--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -1,5 +1,4 @@
-<h1>New Task for - {{projects.name}}</h1>
-
+<h1>New Task</h1>
 <div class="row">
   <div class="col-md-6">
     <form class="create-form pl-3" style="width: 34rem;">
@@ -41,23 +40,23 @@
         </div>
       </div>
       <div class="form-group " id="cooking">
-
+        <label for="hardware" >Cooking Hardware</label>
         <button type="button" class=" btn btn-primary" id="btnCooking">Add cooking hardware</button>
         <div class="mt-3" id="opCooking"></div>
-
+       
       </div>
       <div class="form-group">
-
-        <button type="button" class=" btn btn-primary" id="btnIngredients">Add Ingredients</button>
+        <label for="ingredients">Ingredients</label>
+       <button type="button" class=" btn btn-primary" id="btnIngredients">Add Ingredients</button>
         <div class="mt-3" id="opIngredients"></div>
       </div>
       <div class="form-group">
-
-        <button type="button" class=" btn btn-primary" id="btnSteps">Add steps</button>
+        <label for="steps">S teps</label>
+      <button type="button" class=" btn btn-primary" id="btnSteps">Add steps</button>
         <div class="mt-3" id="opSteps"></div>
       </div>
 
-      <input type="hidden" id="idProject" value={{projects.id}}>
+      <input type="hidden" id="idProject" value="1">
 
 
       <button type="submit" class="btn btn-primary">Add Task</button>
@@ -69,14 +68,14 @@
 
     </h4>
     <ul class="list-group mb-3">
-
-      {{#each tasks}}
+     
+         {{#each tasks}}
       <li class="list-group-item d-flex justify-content-between lh-condensed">
         <div>
 
           <h6 class="my-0">
             Task Number: {{taskNumber}} - Name:{{name}} <br>
-
+       
 
           </h6>
 
@@ -90,7 +89,7 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  description: {{description}}<br>
+                 description: {{description}}<br>
                   time Since Last Step: {{timeSinceLastStep}}<br>
                   time Units: {{timeUnits}} <br>
                   cooking Hardware:<br> {{{ cookingHardware}}} <br>
@@ -100,17 +99,17 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-
+                 
                 </div>
               </div>
             </div>
           </div>
-
+          
         </div>
         <span class="text-muted">
-          <!-- Button trigger modal -->
+           <!-- Button trigger modal -->
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal{{id}}">
-            Details
+           Details
           </button>
           <button class="delete btn btn-primary" data-id={{id}}>
             Delete
@@ -118,7 +117,7 @@
         </span>
 
       </li>
-      {{/each}}
+       {{/each}}
 
     </ul>
 
