--- a/views/partials/projects/project-block.handlebars
+++ b/views/partials/projects/project-block.handlebars
@@ -13,7 +13,7 @@
     <td>{{userId}}</td>
     <td><a href='/task/{{id}}'>Add new task {{id}}</a>
       <td> <span class='delbtn' data-id={{id}}> <button type=“button” > Delete Task</button></td></span>
-       <td> <span class='updatebtn' data-id={{id}}> <button type=“button” > Update</button></td></span
+       <td> <span class='updatebtn' data-id={{id}}> <button type=“button” > Update</button></td></span>
   </tr>
   {{/each}}
 </table>
