--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
 	<script src="/js/form.js"></script>
 	<script src="/js/main.js"></script>
 	<script src="/js/task.js"></script>
-	<script src="/js/register.js"></script>
+	<script src="/js/Register.js"></script>
 
 
 
