--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,29 +1,155 @@
-<h1>Fermentor </h1>
-<form>
-  {{#if user}}
-    <div class="form login-form">
-      <p>Logged in as <strong>{{user.username}}</strong></p>
-      <div class="buttons">
-        <a class="button logout" href="#">Logout</a>
-      </div>
+
+{{#if user}}
+ 
+{{/if}}
+ <div class="page" style="background-color:white; position:relative; width:100%;">
+        <div class="home-page-promo" style="margin:0; padding:0; border:0; vertical-align:baseline;">
+           
+            <section class="promo-overview nav-section" style="padding:5px; margin:10px; text-align:center;">
+                <div class="nav-content promo-overview-content" style="order:2; display:flex; flex-direction:column; align-items:center; max-width:100%;">
+                    <div class="promo-overview-header" style="color:blueviolet; font-size:22px; letter-spacing:3px; color: #bababa; margin-bottom:10px;">
+                        THE ferMentor EXPERIENCE</div>
+                        <img alt="ferment" src="photos/ferment3.jpeg" class="ferment" style="width:550px; height:300px;">
+                    <h1 class="overview-title nav-title" style="font-size:42px; margin-top:25px; margin-bottom:10px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:sandybrown; letter-spacing:2px;">
+                        ferMentor is your electronic fermentation guide</h1>
+                    <p class="promo-overview-description nav-description" style="color:slategray; font-size:1em; line-height:1.5; margin-bottom:25px;">From a
+                        list of fermentation recepies,
+                        step-by-step guides to handy tools, ferMentor has
+                        everything you need to become a master at fermenting.
+                        <br>
+                         Create your own fermentation profile where you are able to collect fermatation apps as well as creating your very own for the rest of the world to see. </p>
+                    <button class="btn-tertiary promo-cta" data-tracking="CTA1" title="Join Now for Free" aria-label="Join Now for Free"
+                        style="padding: 0 2em; height:60px; color:white; display:inline-block; font-size:35px; border-color:black 3px; background-color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; margin-bottom:20px; margin-top:50px; ">Join
+                        Now for Free</button>
+                </div>
+            </section>
+            <section class="nav-section feautures-section" style="margin:10px; text-align:center;">
+                <div class="nav-section-image-wrapper onscreen">
+                    <img alt="fermentation" src="photos/ferment2.jpeg" class="features-image-mobile" width="1000px;;"
+                        height="500px;;" data-pin-nopin="true">
+                    <div class="dotted-line"></div>
+
+                </div>
+                <div class="features-content nav-content">
+                    <h2 class="features-overview-title nav-title" style="font-size:37px; padding-bottom:50px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:sandybrown; letter-spacing:4px;">Find
+                        the Perfect Recipe</h2>
+                    <h2 class="features-section-title filter-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 44px; letter-spacing:4px; margin-bottom:10px;">Sort
+                        &amp; Filter</h2>
+                        <img src="photos/ferment.jpeg" class="sort-filter" alt="sort-filter" width="40%;" height="20%;" style="text-align:center;">
+                    <p class="features-section-description filter-description" style="color:slategray; font-size:19px; margin-bottom:60px;">ferMentor's
+                        unique search filters allow
+                        you to narrow down your search by fermentation time, categories, diet and more!</p>
+                    <h2 class="features-section-title collection-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:34px; letter-spacing:3px; margin-bottom:10px;">Collect
+                        Your Favorite Recipes</h2>
+                    <p class="features-section-description collection-description" style="color:slategray; margin-bottom:60px;">Collect,
+                        save and organize your
+                        favorite fermenting guides in your personal profile.</p>
+
+                </div>
+
+            </section>
+            <section class="search-section" style="margin:10px; text-align:center;">
+                <h2 class="search-section-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:20px; font-size:30px; letter-spacing:3px; margin-bottom:0px;">Search
+                    over 100+ Recipes</h2>
+                <p class="search-section-content" style="color:slategray; margin-bottom:18px;">Search fermenting
+                    recipes, including ferMentors exclusive recipes</p>
+                <div class="search-section-buttons">
+                    <button class="search-section-button active" value="quick" title="Quick" style="background-color:sandybrown;"
+                        aria-label="Quick">Quick &
+                        Easy</button>
+                    <button class="search-section-button" value="longer" title="Longer" style="background-color:sandybrown;"
+                        aria-label="Longer">Longer &
+                        Complicated</button>
+                    <button class="search-section-button" value="craftAl" title="craftAl" style="background-color:sandybrown;"
+                        aria-label="craftAl">Craft
+                        Alcohol</button>
+                    <button class="search-section-button" value="kidFriendly" title="Kid Friendly" style="background-color:sandybrown; margin-bottom:15px;"
+                        aria-label="Kid Friendly">Non-Alcoholic
+                        Crafts</button>
+                </div>
+                <div class="static-recipe-cards">
+                    <div class="static-recipe-card" id="kombucha">
+                        <div class="recipe-details-image">
+                            <div class="class-title" style="color:black;font-size:22px;">Kombucha</div>
+                            <img class="recipe-image" src="photos/kombucha.jpeg" style="width:40%; height:50%;"
+                                data-pin-nopin="true">
+                        </div>
+                        <div class="card-title" style="color:black;font-size:22px;">Sourdough Bread</div>
+                    </div>
+                    <div class="static-recipe-card" id="sourdough">
+                        <div class="recipe-details-image">
+                            <img class="recipe-image" src="photos/sourdough.jpeg" style="width:40%; height:50%;"
+                                data-pin-nopin="true">
+                        </div>
+                        <div class="card-title" style="color:black; font-size:22px;">Yogurt</div>
+                    </div>
+                    <div class="static-recipe-card" id="yogurt">
+                        <div class="recipe-details-image">
+                            <img class="recipe-image" src="photos/yogurt.jpeg" style="width:40%; height:50%;"
+                                data-pin-nopin="true">
+                        </div>
+                        <div class="card-title" style="color:black; font-size: 22px;">Lentils</div>
+                    </div>
+                    <div class="static-recipe-card" id="lentils">
+                        <div class="recipe-details-image">
+                            <img class="recipe-image" src="photos/lentils.jpeg" style="width:40%; height:50%;"
+                                data-pin-nopin="true">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="nav-section plan-section" style="margin:10px; text-align:center;">
+                <div class="plan-content nav-content">
+                    <h2 class="nav-title plan-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:39px; letter-spacing:5px;">Plan</h2>
+                    <p class="nav-description plan-description" style="color:slategray;">Browse through the recipe
+                        guides and plan according to
+                        the total time length of each recipe. Schedule a future recipe to your calendar depending on
+                        your time!
+                    </p>
+                </div>
+            </section>
+            <section class="fermenting-section" style="margin:10px; text-align:center;">
+                <h2 class="nav-title fermenting-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 35px; letter-spacing:4px;">Fermenting</h2>
+                <img class="ferment" src="photos/ferment4.jpeg" style="width:500px; height:300px;">
+                <p class="fermenting-content" style="color:slategray;">
+                    Let ferMentor be your guide to start your own fermentation processess with our step-by-step
+                    recipes, including video tutorials, timers, and more handy tools to make fermenting a breeze.
+                </p>
+            </section>
+            <section class="nav-section more-reasons-section" style="margin:10px; text-align:center;">
+                <div class="nav-content-wrapper">
+                    <div class="more-reasons-content nav-content">
+                        <h2 class="nav-title more-reasons-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 34px; letter-spacing: 4px;">More
+                            Reasons to Join ferMentor</h2>
+                        <p class="nav-description more-reasons-description" style="color:slategray;">ferMentor also
+                            allow users to create their
+                            own fermentation recepies and publish them for other users to view and follow their guides.</p>
+                    </div>
+                </div>
+            </section>
+            <section class="mobile-section nav-section" style="margin:10px; text-align:center;">
+                <h2 class="mobile-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:33px; letter-spacing:3px;">
+                    ferMentor is wherever you are </h2>
+                <p class="mobile-description" style="color:slategray;">Take ferMentor wherever you go available at the
+                    App Store and Google
+                    Play!</p>
+                <div class="app-store-links">
+                    <div class="app-promo-section">
+                        <li class="nav-menu-list-menu">
+
+                            <img alt="iPhone" src="https://x.yummlystatic.com/s/1ba9ddc/img/mobile/badge-ios.svg"
+                                data-label="Download on the App Store" data-pin-nopin="true" style=" text-align:center;">
+
+                        </li>
+                        <li class="nav-menu-list-menu">
+                            <img alt="Android" src="https://x.yummlystatic.com/s/1ba9ddc/img/mobile/badge-android.svg"
+                                data-label="Get it on Google Play" data-pin-nopin="true" style=" text-align:center;">
+                        </li>
+                    </div>
+                </div>
+            </section>
+
+        </div>
+        
     </div>
-  {{else}}
-    <div class="form login-form">
-      <input type="text" name="username" placeholder="username">
-      <input type="text" name="password" placeholder="password">
-      <div class="buttons">
-        <button class="button login">Login</button>
-        <a class="button signup" href="/register">Signup</a>
-      </div>
-    </div>
-    <div class="form signup-form">
-      <input type="text" name="username" placeholder="username">
-      <input type="text" name="email" placeholder="email">
-      <input type="text" name="password" placeholder="password">
-      <div class="buttons">
-        <a class="button login" href="/">Login</a>
-        <button class="button signup">Signup</button>
-      </div>
-    </div>
-  {{/if}}
-</form>
+    </nav>
