--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -1,4 +1,6 @@
-<h1>New Task</h1>
+<div class="current task" style="background-color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+<h1>New Task for - {{projects.name}}</h1>
+
 <div class="row">
   <div class="col-md-6">
     <form class="create-form pl-3" style="width: 34rem;">
@@ -40,42 +42,42 @@
         </div>
       </div>
       <div class="form-group " id="cooking">
-        <label for="hardware" >Cooking Hardware</label>
+
         <button type="button" class=" btn btn-primary" id="btnCooking">Add cooking hardware</button>
         <div class="mt-3" id="opCooking"></div>
-       
+
       </div>
       <div class="form-group">
-        <label for="ingredients">Ingredients</label>
-       <button type="button" class=" btn btn-primary" id="btnIngredients">Add Ingredients</button>
+
+        <button type="button" class=" btn btn-primary" id="btnIngredients">Add Ingredients</button>
         <div class="mt-3" id="opIngredients"></div>
       </div>
       <div class="form-group">
-        <label for="steps">S teps</label>
-      <button type="button" class=" btn btn-primary" id="btnSteps">Add steps</button>
+
+        <button type="button" class=" btn btn-primary" id="btnSteps">Add steps</button>
         <div class="mt-3" id="opSteps"></div>
       </div>
 
-      <input type="hidden" id="idProject" value="1">
+      <input type="hidden" id="idProject" value={{projects.id}}>
 
 
       <button type="submit" class="btn btn-primary">Add Task</button>
     </form>
   </div>
-  <div class="col-md-6 order-md-2 mt-4">
+  <div class="col-md-6 order-md-4 mt-2">
     <h4 class="d-flex">
-      <span class="text-muted">Task List</span>
+      <span class="text-muted" style="font-size:30px;">Task List</span>
 
     </h4>
     <ul class="list-group mb-3">
-     
-         {{#each tasks}}
+
+      {{#each tasks}}
       <li class="list-group-item d-flex justify-content-between lh-condensed">
         <div>
 
           <h6 class="my-0">
             Task Number: {{taskNumber}} - Name:{{name}} <br>
-       
+
 
           </h6>
 
@@ -89,7 +91,7 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                 description: {{description}}<br>
+                  description: {{description}}<br>
                   time Since Last Step: {{timeSinceLastStep}}<br>
                   time Units: {{timeUnits}} <br>
                   cooking Hardware:<br> {{{ cookingHardware}}} <br>
@@ -99,17 +101,17 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                 
+
                 </div>
               </div>
             </div>
           </div>
-          
+
         </div>
         <span class="text-muted">
-           <!-- Button trigger modal -->
+          <!-- Button trigger modal -->
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal{{id}}">
-           Details
+            Details
           </button>
           <button class="delete btn btn-primary" data-id={{id}}>
             Delete
@@ -117,11 +119,11 @@
         </span>
 
       </li>
-       {{/each}}
+      {{/each}}
 
     </ul>
 
   </div>
-
+</div>
 </div>
 </div>
