add my project and task clonning

--- a/views/NewProjectPage.handlebars
+++ b/views/NewProjectPage.handlebars
@@ -1,5 +1,5 @@
 <div class="header" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; ">
-<h1>New Project</h1>
+<h1>Add New Project</h1>
 
 <div class="categories" style="text-align:center;">
 
