--- a/views/partials/tasks/tasks-block.handlebars
+++ b/views/partials/tasks/tasks-block.handlebars
@@ -1,60 +1,81 @@
+
 <div class="col-md-6 order-md-2 mt-4">
     <h4 class="d-flex">
-        <span class="text-muted">Task List</span>
+        <span class="text-muted">Task List
+            {{#if clone}}
+- Add your own notes {{projectId}}
+                {{/if}}
+            
+             </span>
 
     </h4>
-    <ul class="list-group mb-3">
+    
+    {{#if clone}}
+    <form class="clone-form">
+        {{/if}}
+        <ul class="list-group mb-3">
 
-        {{#each tasks}}
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
+            {{#each tasks}}
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
 
-                <h6 class="my-0">
-                    Task Number: {{taskNumber}} - Name:{{name}} <br>
+                    <h6 class="my-0"> {{id}}
+                        Task Number: {{taskNumber}} - Name:{{name}}  <br>
+                    </h6>
+                    {{#if ../clone}}
+                    <textarea class="form-control notes" id="note" rows="3" data-attr={{id}}></textarea>
 
+                    <input type="hidden" id="idProject" value={{projectId}}>
+                    <input type="hidden" id="idUser" value={{../user.id}}>
+                    <input type="hidden" id="idTask" value={{id}}>
+                    {{/if}}
+                    <div class="modal" id="exampleModal{{id}}" tabindex="-1" role="dialog">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">Task Number: {{taskNumber}} - Name:{{name}}</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    description: {{description}}<br>
+                                    time Since Last Step: {{timeSinceLastStep}}<br>
+                                    time Units: {{timeUnits}} <br>
+                                    cooking Hardware:<br> {{{ cookingHardware}}} <br>
+                                    duration: {{duration}} <br>
+                                    ingredients:<br>{{{ingredients}}} <br>
+                                    steps:<br>{{{steps}}}<br>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 
-                </h6>
-
-                <div class="modal" id="exampleModal{{id}}" tabindex="-1" role="dialog">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title">Task Number: {{taskNumber}} - Name:{{name}}</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                description: {{description}}<br>
-                                time Since Last Step: {{timeSinceLastStep}}<br>
-                                time Units: {{timeUnits}} <br>
-                                cooking Hardware:<br> {{{ cookingHardware}}} <br>
-                                duration: {{duration}} <br>
-                                ingredients:<br>{{{ingredients}}} <br>
-                                steps:<br>{{{steps}}}<br>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-
+                                </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
+                <span class="text-muted">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal{{id}}">
+                        Details
+                    </button>
+                    {{#unless ../clone}}
+                    <button class="delete btn btn-primary" data-id={{id}}>
+                        Delete
+                    </button>
+                    {{/unless}}
 
-            </div>
-            <span class="text-muted">
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal{{id}}">
-                    Details
-                </button>
-                <button class="delete btn btn-primary" data-id={{id}}>
-                    Delete
-                </button>
-            </span>
 
-        </li>
-        {{/each}}
+                </span>
 
-    </ul>
+            </li>
+            {{/each}}
 
+        </ul>
+        {{#if clone}}
+        <button type="submit" class="btn btn-primary">Add notes</button>
+    </form>
+    {{/if}}
 </div>
