--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,7 +4,7 @@
       <p>Logged in as <strong>{{user.username}}</strong></p>
       <div class="buttons">
         <a class="button profile" href="#" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:white; background-color:sandybrown; font-size:20px;">My Profile</a>
-        <a class="button main" href="/home.handlebars" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serifl; color:sandybrown; font-size:20px;">Main Page</a>
+        <a class="button main" href="/" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serifl; color:sandybrown; font-size:20px;">Main Page</a>
       </div>
     </div>
   {{else}}
@@ -13,7 +13,7 @@
       <input type="text" name="password" placeholder="password">
       <div class="buttons">
         <button class="button login" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:sandybrown;">Log in</button>
-        <a class="button signup" href="/register-user" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:sandybrown;">Signup</a>
+        <a class="button signup" href="/register" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:sandybrown;">Signup</a>
       </div>
     </div>
     <div class="form signup-form" style="background-color:sandybrown;">
