--- a/views/projectList.handlebars
+++ b/views/projectList.handlebars
@@ -1,8 +1,17 @@
+{{#if viewMy}}
+<h3 class="text-center">{{user.username}} projects</h3>
+{{else}}
+<h3 class="text-center">Projects to Use</h3>
+{{/if}}
+
+
 <table class="table table-sm table-striped w-50 pb-10" align="center" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+
+
     <thead class="table-info">
         <tr>
 
-            <th>Project Name</th>
+            <th>Project Name </th>
             <th>General Instructions</th>
             <th></th>
 
