--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -43,25 +43,25 @@
       </div>
       <div class="form-group " id="cooking">
 
-        <button type="button" class=" btn btn-primary" id="btnCooking">Add cooking hardware</button>
+        <button type="button" class="btn btn-primary" id="btnCooking"><i class="fas fa-plus-circle"> Add cooking hardware</i></button>
         <div class="mt-3" id="opCooking"></div>
 
       </div>
       <div class="form-group">
 
-        <button type="button" class=" btn btn-primary" id="btnIngredients">Add Ingredients</button>
+        <button type="button" class=" btn btn-primary" id="btnIngredients"><i class="fas fa-plus-circle"> Add Ingredients </i></button>
         <div class="mt-3" id="opIngredients"></div>
       </div>
       <div class="form-group">
 
-        <button type="button" class=" btn btn-primary" id="btnSteps">Add steps</button>
+        <button type="button" class=" btn btn-primary" id="btnSteps"><i class="fas fa-plus-circle "> Add steps</i></button>
         <div class="mt-3" id="opSteps"></div>
       </div>
 
       <input type="hidden" id="idProject" value={{projects.id}}>
 
 
-      <button type="submit" class="btn btn-primary">Add Task</button>
+      <button type="submit" class="btn btn-primary">Create New Task</button>
     </form>
   </div>
 {{> tasks/tasks-block}}
