add project management

--- a/views/partials/tasks/tasks-block.handlebars
+++ b/views/partials/tasks/tasks-block.handlebars
@@ -19,7 +19,7 @@
                 <div>
 
                     <h6 class="my-0"> 
-                        Task Number: {{taskNumber}} - Name: {{name}} <br>
+                      <b>  Task Number: {{taskNumber}} - Name: {{name}} </b><br>
                     </h6>
                     {{#if ../clone}}
                     <textarea class="form-control notes mt-2" id="note" rows="3" cols=50 data-attr={{id}}></textarea>
@@ -32,20 +32,20 @@
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title">Task Number: {{taskNumber}} - Name:{{name}}</h5>
+                                    <h5 class="modal-title"><b>Task Number: {{taskNumber}} - Name:{{name}}</b></h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    description: {{description}}<br>
-                                    time Since Last Step: {{timeSinceLastStep}}<br>
+                                    <b>Description:</b> {{description}}<br>
+                                    <b>Time Scince last Step: </b> {{timeSinceLastStep}}<br>
                                     time Units: {{timeUnits}} <br>
-                                    duration: {{duration}} <br>
-                                    cooking Hardware:<br> {{{ cookingHardware}}} <br>
+                                    <b>Duration:</b> {{duration}} <br>
+                                    <b>Cooking Hardware:</b><br> {{{ cookingHardware}}} <br>
 
-                                    ingredients:<br>{{{ingredients}}} <br>
-                                    steps:<br>{{{steps}}}<br>
+                                    <b>Ingredients:</b><br>{{{ingredients}}} <br>
+                                    <b>Steps:</b><br>{{{steps}}}<br>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
