--- a/views/partials/projects/project-block.handlebars
+++ b/views/partials/projects/project-block.handlebars
@@ -1,19 +1,34 @@
-<table class="table" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color:sandybrown; color:white; text-align:center;">
-  <tr>
-    <th>Project Name</th>
-    <th>General Instructions</th>
-    <th></th>
-  </tr>
-  
-  {{#each projects}}
-  <tr>
+<table class="table table-sm table-striped w-50 pb-10 " align="center" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+  <thead>
+    <tr style="background-color:sandybrown; color:white; text-align:center;">
+      <th>Project Name</th>
+      <th>General Instructions</th>
+      <th> </th>
+      <th> </th>
+      <th> </th>
+      <th> </th>
 
-    <td>{{name}}</td>
-    <td>{{instructions}}</td>
-    <td>{{userId}}</td>
-    <td><a href='/task/{{id}}'>Add new task </a>
-      <td> <span class='delbtn' data-id={{id}}> <button type=“button” > Delete </button></td></span>
-       <td> <span class='updatebtn' data-id={{id}}> <button type=“button” > Update</button></td></span>
-  </tr>
-  {{/each}}
+    </tr>
+  </thead>
+  <tbody>
+    {{#each projects}}
+    <tr>
+
+      <td>{{name}}</td>
+      <td>{{instructions}}</td>
+      <td>{{userId}}</td>
+      <td><a href='/task/{{id}}'>Add new task </a>
+      <td> <span class='delbtn' data-id={{id}}> <button type=“button”> Delete </button></td></span>
+      <td> <span class='updatebtn' data-id={{id}}> <button type=“button”> Update</button></td></span>
+    </tr>
+    {{/each}}
+    <tr style="background-color: white">
+      <td><a href="/new"> Add New Project </a></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
 </table>
