Fx steps and ingredients and update button

--- a/views/partials/tasks/tasks-block.handlebars
+++ b/views/partials/tasks/tasks-block.handlebars
@@ -44,8 +44,8 @@
                                     <b>Duration:</b> {{duration}} <br>
                                     <b>Cooking Hardware:</b><br> {{{ cookingHardware}}} <br>
 
-                                    <b>Ingredients:</b><br>{{{ingredients}}} <br>
-                                    <b>Steps:</b><br>{{{steps}}}<br>
+                                    <b>Ingredients:</b><br>{{{steps}}} <br>
+                                    <b>Steps:</b><br>{{{ingredients}}}<br>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
