--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,29 +32,38 @@
 
 <body>
     {{#if user}}
-
-    <p style="color:sandybrown; float:right;"> <strong>{{user.username}}</strong> <a class="user"></a></p>
-    <nav class="nav-bar" style="background-color:white; padding:20px; margin: 10px;">
-        <section class="top-bar">
+    
+    <nav class="nav-bar" style="background-color:white; padding:2px; ">
+      
+        <section class="top-bar" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
             <div id="logo">
-                <img src="/photos/logo.png" class="auth-image" alt="logo" width="22%" height="32%" data-pin-nopin="true">
-                <button class="logout" data-tracking="Sign In" title="Sign in" href="#" aria-label="Sign in" style=" color:sandybrown;  transform: translateY(4px); border: 3px solid orange; padding: 0 3em; height: 30px; margin-left:60%;
+                    
+                <img src="/photos/logo.png" class="auth-image" alt="logo" width="17%" height="27%" data-pin-nopin="true">
+                <div style="color:sandybrown;margin-left:62%;">Logged in as: {{user.username}}<a class="user"></a></div>
+                <a href="/myprojects">
+                <button class="profile" data-tracking="My Profile" title="Profile"  aria-label="Profile" style="color:sandybrown; transform: translateY(4px); border:1.5px solid orange; margin-left:45%;">My Projects</button></a>
+                 <a href="/new">
+                <button class="newproject" data-tracking="new" title="newproject" hrer="/new" aria-label="New" style="color:sandybrown; transform: translateY(4px); border: 1.5px solid orange;">Create a Project</button>
+                </a>
+                 <a href="/projectlist">
+                <button class="recipes" data-tracking="recipes" title="Recipes" href="/projectlist" aria-label="Recipes" style="color:sandybrown; transform:translateY(4px); border:1.5px solid orange; heigth:30px;">All Recipes</button>
+                </a>
+                <button class="logout" data-tracking="Sign In" title="Sign in" href="#" aria-label="Sign in" style=" color:sandybrown;  transform: translateY(4px); border: 1.5px solid orange; 
                          font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: transparent; ">
                     Log Out</button>
-
-        </section>
+       
         </div>
+        </section>
     </nav>
-
     {{else}}
-    <nav class="nav-bar" style="background-color:white; padding:20px; margin: 10px;">
+     <nav class="nav-bar" style="background-color:white; padding:2px; ">
         <section class="top-bar">
             <div id="logo">
-                <img src="/photos/logo.png" class="auth-image" alt="logo" width="22%" height="32%" data-pin-nopin="true">
-
-             <a href="/register-user"> <button class="button login"  style=" color:sandybrown; margin:25px 40px 40px; transform: translateY(4px); border: 3px solid orange; padding: 0 3em; height: 30px; margin-left:60%; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: transparent; ">Sign
+                <img src="/photos/logo.png" style="margin-right:35%;" class="auth-image" alt="logo" width="17%" height="27%" data-pin-nopin="true">
+             <a href="/login-user"> <button class="button login"  style=" color:sandybrown; margin:25px 10px 40px; transform: translateY(4px); border: 1.5px solid orange; padding: 0 3em; height: 30px; margin-left:90px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: transparent; ">Log
                     In</button></a>
-
+             <a href="/login-user"> <button class="button login"  style=" color:sandybrown; transform: translateY(4px); border: 1.5px solid orange; padding: 0 3em; height: 30px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: transparent; ">Sign
+                    Up</button></a>
         </section>
         </div>
     </nav>
@@ -113,3 +122,4 @@
 </body>
 
 </html>
+
