--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,7 +62,7 @@
                 <img src="/photos/logo.png" style="margin-right:35%;" class="auth-image" alt="logo" width="17%" height="27%" data-pin-nopin="true">
              <a href="/login-user"> <button class="button login"  style=" color:sandybrown; margin:25px 10px 40px; transform: translateY(4px); border: 1.5px solid orange; padding: 0 3em; height: 30px; margin-left:90px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: transparent; ">Log
                     In</button></a>
-             <a href="/login-user"> <button class="button login"  style=" color:sandybrown; transform: translateY(4px); border: 1.5px solid orange; padding: 0 3em; height: 30px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: transparent; ">Sign
+             <a href="/register-user"> <button class="button signup"  style=" color:sandybrown; transform: translateY(4px); border: 1.5px solid orange; padding: 0 3em; height: 30px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: transparent;">Sign
                     Up</button></a>
         </section>
         </div>
