Arnesh deployment work

--- a/views/partials/projects/project-block.handlebars
+++ b/views/partials/projects/project-block.handlebars
@@ -7,7 +7,6 @@
       <th> </th>
       <th> </th>
       <th> </th>
-
     </tr>
   </thead>
   <tbody>
@@ -23,7 +22,7 @@
     </tr>
     {{/each}}
     <tr style="background-color: white">
-      <td><a href="/new"> Add New Project </a></td>
+      <td><button type="button" id = "addProject"> Add New Project </button></td>
       <td></td>
       <td></td>
       <td></td>
