add user to projectlist and my projects

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,7 +38,7 @@
         <section class="top-bar" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
             <div id="logo">
                     
-                <img src="/photos/logo.png" class="auth-image" alt="logo" width="17%" height="27%" data-pin-nopin="true">
+                <a href="/"><img src="/photos/logo.png" class="auth-image" alt="logo" width="17%" height="27%" data-pin-nopin="true"></a>
                 <div style="color:sandybrown;margin-left:62%;">Logged in as: {{user.username}}<a class="user"></a></div>
                 <a href="/myprojects">
                 <button class="profile" data-tracking="My Profile" title="Profile"  aria-label="Profile" style="color:sandybrown; transform: translateY(4px); border:1.5px solid orange; margin-left:45%;">My Projects</button></a>
@@ -59,12 +59,12 @@
      <nav class="nav-bar" style="background-color:white; padding:2px; ">
         <section class="top-bar">
             <div id="logo">
-                <img src="/photos/logo.png" style="margin-right:35%;" class="auth-image" alt="logo" width="17%" height="27%" data-pin-nopin="true">
+               <a href="/"> <img src="/photos/logo.png" style="margin-right:35%;" class="auth-image" alt="logo" width="17%" height="27%" data-pin-nopin="true"></a>
              <a href="/login-user"> <button class="button login"  style=" color:sandybrown; margin:25px 10px 40px; transform: translateY(4px); border: 1.5px solid orange; padding: 0 3em; height: 30px; margin-left:90px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: transparent; ">Log
                     In</button></a>
              <a href="/register-user"> <button class="button signup"  style=" color:sandybrown; transform: translateY(4px); border: 1.5px solid orange; padding: 0 3em; height: 30px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; background-color: transparent;">Sign
                     Up</button></a>
-                    
+
         </section>
         </div>
     </nav>
