--- a/views/projectList.handlebars
+++ b/views/projectList.handlebars
@@ -10,7 +10,7 @@
 
     <thead class="table-info">
         <tr>
-            <th>User Owner</th>
+            <th>Author</th>
             <th>Project Name </th>
             <th>Overview</th>
             <th></th>
