--- a/views/NewProjectPage.handlebars
+++ b/views/NewProjectPage.handlebars
@@ -1,46 +1,70 @@
 <div class="header" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; ">
-<h1>Add New Project</h1>
+    <h1>Add New Project</h1>
 
-<div class="categories" style="text-align:center;">
+    <div class="modal" id="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title"><b>Register a Project{{name}}</b></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
 
-<form class="create-form card p-2" style="width: 34rem; ">
-    <div class="form-group">
-        <label for="customersList">Select a Category:</label>
-        <select class="form-control" id="customersList">
-            {{#each categories}}
-            <option value={{id}}>{{name}}</option>
-            {{/each}}
-        </select>
+                    <div class="categories" style="text-align:center;">
+
+                        <form class="create-form card p-2" style="width: 30rem; ">
+                            <div class="form-group">
+                                <label for="customersList">Select a Category:</label>
+                                <select class="form-control" id="customersList">
+                                    {{#each categories}}
+                                    <option value={{id}}>{{name}}</option>
+                                    {{/each}}
+                                </select>
+                            </div>
+                        </form>
+                    </div>
+                    <p> Status </p>
+                    <form class="create-form card p-2" style="width: 30rem; text-align:center;">
+
+                        <div class="form-group">
+                            <label for="statusList">Select a Status:</label>
+                            <select class="form-control" id="statusList">
+                                {{#each statuses}}
+                                <option value={{id}}>{{name}}</option>
+                                {{/each}}
+                            </select>
+                        </div>
+                    </form>
+                    <br>
+                    <form class="projectName">
+                        Project Name: <input type="text" name="pName" id="projectName"><br>
+                    </form>
+                    <br>
+                    <form class="pictureURL">
+                        PictureURL: <input type="text" name="pURL" id="pictureURL"><br>
+                    </form>
+                    <br>
+                    <form class="generalInstructions">
+                        General Instructions: <input type="text" name="gInstructions" id="ginstructions"><br>
+                    </form>
+                    <input type="hidden" id="userid" value={{user.id}}><br>
+                    <form class="submitButton">
+                        <input type="submit" value="Submit" class="btn btn-primary" id="submitbutton">
+                        <button type="button" id = "closeButton" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </form>
+                    <div class="modal-footer">
+                
+
+            </div>
+                </div>
+            </div>
+            
+        </div>
     </div>
-</form>
 </div>
-<p> Status </p>
-<form class="create-form card p-2" style="width: 34rem; text-align:center;">
 
-    <div class="form-group">
-        <label for="statusList">Select a Status:</label>
-        <select class="form-control" id="statusList">
-            {{#each statuses}}
-            <option value={{id}}>{{name}}</option>
-            {{/each}}
-        </select>
-    </div>
-</form>
-<br>
-<form class = "projectName">
-  Project Name: <input type="text" name="pName" id="projectName"><br>
-</form>
-<br>
-<form class = "pictureURL">
-  PictureURL: <input type="text" name="pURL" id="pictureURL"><br>
-</form>
-<br>
-<form class = "generalInstructions">
-  General Instructions: <input type="text" name="gInstructions" id="ginstructions"><br>
-</form>
-<input type="hidden" id="userid" value={{user.id}}><br>
-<form class = "submitButton">
-<input type="submit" value="Submit" id="submitbutton">
-</form>
 </div>
+
 {{> projects/project-block}}
