styling in main page and started readme

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,21 +2,19 @@
 <div class="page" style="background-color:white; position:relative; width:100%;">
     <div class="home-page-promo" style="margin:0; padding:0; border:0; vertical-align:baseline;">
 
-        <section class="promo-overview nav-section" style="padding:5px; margin:10px; text-align:center;">
+        <section class="promo-overview nav-section" style="padding:5px; margin:10px; text-align:center; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
             <div class="nav-content promo-overview-content" style="order:2; display:flex; flex-direction:column; align-items:center; max-width:100%;">
                 <div class="promo-overview-header" style="color:blueviolet; font-size:22px; letter-spacing:3px; color: #bababa; margin-bottom:10px;">
-                    THE ferMentor EXPERIENCE</div>
+                    THE FerMentor EXPERIENCE</div>
                 <img alt="ferment" src="photos/ferment3.jpeg" class="ferment" style="width:550px; height:300px;">
                 <h1 class="overview-title nav-title" style="font-size:42px; margin-top:25px; margin-bottom:10px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:sandybrown; letter-spacing:2px;">
-                    ferMentor is your electronic fermentation guide</h1>
+                    FerMentor is your electronic fermentation guide</h1>
                 <p class="promo-overview-description nav-description" style="color:slategray; font-size:1em; line-height:1.5; margin-bottom:25px;">From
-                    a
-                    list of fermentation recepies,
-                    step-by-step guides to handy tools, ferMentor has
+                    a list of fermentation recepies,
+                    step-by-step guides to handy tools, FerMentor has
                     everything you need to become a master at fermenting.
                     <br>
-                    Create your own fermentation profile where you are able to collect fermatation apps as well as
-                    creating your very own for the rest of the world to see. </p>
+                    Create your own fermentation profile where you are able to collect fermatation recipes and also publish your very own for others to view and follow.  </p>
                     {{#unless user}}
 
 
@@ -33,29 +31,32 @@
                 <div class="dotted-line"></div>
 
             </div>
-            <div class="features-content nav-content">
-                <h2 class="features-overview-title nav-title" style="font-size:37px; padding-bottom:50px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:sandybrown; letter-spacing:4px;">Find
-                    the Perfect Recipe</h2>
-                <h2 class="features-section-title filter-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 44px; letter-spacing:4px; margin-bottom:10px;">Sort
+            <div class="features-content nav-content" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+                <h2 class="features-overview-title nav-title" style="font-size:37px;  color:sandybrown; letter-spacing:4px;">Find
+                    or Create the Perfect Recipe</h2>
+                    <p class="description" style="color:slategray; font-size:22px; margin-top:5px;">Are you a master at fermenting and have always wanted to share your creations with the world?</p>
+                <h2 class="features-section-title filter-title" style="color:sandybrown; font-size: 44px; letter-spacing:4px; margin-bottom:10px;">Sort
                     &amp; Filter</h2>
                 <img src="photos/ferment.jpeg" class="sort-filter" alt="sort-filter" width="40%;" height="20%;" style="text-align:center;">
-                <p class="features-section-description filter-description" style="color:slategray; font-size:19px; margin-bottom:60px;">ferMentor's
+                <p class="features-section-description filter-description" style="color:slategray; font-size:25px; margin-top:15px; margin-bottom:50px;">FerMentor's
                     unique search filters allow
                     you to narrow down your search by fermentation time, categories, diet and more!</p>
-                <h2 class="features-section-title collection-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:34px; letter-spacing:3px; margin-bottom:10px;">Collect
+                <h2 class="features-section-title collection-title" style="color:sandybrown; font-size:34px; letter-spacing:3px; margin-bottom:10px;">Collect
                     Your Favorite Recipes</h2>
-                <p class="features-section-description collection-description" style="color:slategray; margin-bottom:60px;">Collect,
-                    save and organize your
-                    favorite fermenting guides in your personal profile.</p>
+                <p class="features-section-description collection-description" style="color:slategray; font-size:20px; margin-bottom:60px;"> Our members are able to collect,
+                    save and organize their
+                    favorite fermenting guides in their personal profile. Recepies are exclusive for members only!
+                    <br>
+                     Sign up today for free!</p>
 
             </div>
 
         </section>
-        <section class="search-section" style="margin:10px; text-align:center;">
-            <h2 class="search-section-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:20px; font-size:30px; letter-spacing:3px; margin-bottom:0px;">Search
-                over 100+ Recipes</h2>
-            <p class="search-section-content" style="color:slategray; margin-bottom:18px;">Search fermenting
-                recipes, including ferMentors exclusive recipes</p>
+        <section class="search-section" style="margin:10px; text-align:center; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+            <h2 class="search-section-title" style="color:sandybrown;  font-size:20px; font-size:30px; letter-spacing:3px; margin-bottom:0px;">Search
+                Over 100+ Recipes</h2>
+            <p class="search-section-content" style="color:slategray; margin-bottom:18px; font-size:20px;">Search fermenting
+                recipes, including FerMentors exclusive recipes</p>
             <div class="search-section-buttons">
                 <button class="search-section-button active" value="quick" title="Quick" style="background-color:sandybrown;"
                     aria-label="Quick">Quick &
@@ -75,6 +76,12 @@
                     <div class="recipe-details-image">
                         <div class="class-title" style="color:black;font-size:22px;">Kombucha</div>
                         <img class="recipe-image" src="photos/kombucha.jpeg" style="width:40%; height:50%;"
+                            data-pin-nopin="true">
+                    </div>
+                     <div class="static-recipe-card" id="beer">
+                    <div class="recipe-details-image">
+                        <div class="class-title" style="color:black;font-size:22px;">Beer</div>
+                        <img class="recipe-image" src="photos/beer.jpeg" style="width:40%; height:50%;"
                             data-pin-nopin="true">
                     </div>
                     <div class="card-title" style="color:black;font-size:22px;">Sourdough Bread</div>
@@ -101,7 +108,7 @@
                 </div>
             </div>
         </section>
-        <section class="nav-section plan-section" style="margin:10px; text-align:center;">
+        <section class="nav-section plan-section" style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; margin:10px; text-align:center;">
             <div class="plan-content nav-content">
                 <h2 class="nav-title plan-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:39px; letter-spacing:5px;">Plan</h2>
                 <p class="nav-description plan-description" style="color:slategray;">Browse through the recipe
@@ -111,29 +118,36 @@
                 </p>
             </div>
         </section>
-        <section class="fermenting-section" style="margin:10px; text-align:center;">
-            <h2 class="nav-title fermenting-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 35px; letter-spacing:4px;">Fermenting</h2>
+        <section class="fermenting-section" style="margin:10px; text-align:center; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+            <h2 class="nav-title fermenting-title" style="color:sandybrown; font-size: 35px; letter-spacing:4px;">Fermenting</h2>
             <img class="ferment" src="photos/ferment4.jpeg" style="width:500px; height:300px;">
             <p class="fermenting-content" style="color:slategray;">
-                Let ferMentor be your guide to start your own fermentation processess with our step-by-step
-                recipes, including video tutorials, timers, and more handy tools to make fermenting a breeze.
+                Why is fermentation an important craft to learn?
+                <br> The process of fermentation not only retains enzymes, vitamins, and other nutrients that are usually destroyed
+                <br>
+                 by food processing,
+                 fermentation also helps to make the foods easier to digest and the nutrients easier to assimilate.
+                <br>
+                Let FerMentor be your guide to start your own fermentation processess with our step-by-step
+                recipes, including video tutorials,
+                <br> timers, and more handy tools to make fermenting a breeze.
             </p>
         </section>
-        <section class="nav-section more-reasons-section" style="margin:10px; text-align:center;">
+        <section class="nav-section more-reasons-section" style="margin:10px; text-align:center; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
             <div class="nav-content-wrapper">
                 <div class="more-reasons-content nav-content">
-                    <h2 class="nav-title more-reasons-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 34px; letter-spacing: 4px;">More
-                        Reasons to Join ferMentor</h2>
-                    <p class="nav-description more-reasons-description" style="color:slategray;">ferMentor also
-                        allow users to create their
-                        own fermentation recepies and publish them for other users to view and follow their guides.</p>
+                    <h2 class="nav-title more-reasons-title" style="color:sandybrown; font-size: 34px; letter-spacing: 4px;">More
+                        Reasons to Join FerMentor</h2>
+                    <p class="nav-description more-reasons-description" style="color:slategray;">FerMentor also
+                        allows users to create their
+                        own fermentation recepies and publish them for other users to view and rate their guide.</p>
                 </div>
             </div>
         </section>
-        <section class="mobile-section nav-section" style="margin:10px; text-align:center;">
-            <h2 class="mobile-title" style="color:sandybrown; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size:33px; letter-spacing:3px;">
-                ferMentor is wherever you are </h2>
-            <p class="mobile-description" style="color:slategray;">Take ferMentor wherever you go available at the
+        <section class="mobile-section nav-section" style="margin:10px; text-align:center; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+            <h2 class="mobile-title" style="color:sandybrown;  font-size:33px; letter-spacing:3px;">
+                FerMentor is wherever you are </h2>
+            <p class="mobile-description" style="color:slategray;">Take FerMentor wherever you go available in your browser, at the
                 App Store and Google
                 Play!</p>
             <div class="app-store-links">
